[package]
name = "estnltk-regex-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "estnltk_regex_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
resharp = "0.3"
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
