[workspace]
members = [
    "estnltk-core",
    "estnltk-patterns",
    "estnltk-csv",
    "estnltk-taggers",
    "estnltk-morph",
    "estnltk-grammar",
    "estnltk-python",
    "vabamorf-sys",
    "vabamorf-rs",
    "estnltk-segmentation",
]
resolver = "2"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
resharp = "0.3"
regex = "1"
aho-corasick = "1"
csv = "1"
pyo3 = { version = "0.22", features = ["extension-module"] }
tempfile = "3"
smallvec = { version = "1", features = ["union"] }
