[package]
name = "estnltk-grammar"
version = "0.1.0"
edition = "2021"

[dependencies]
estnltk-core = { path = "../estnltk-core" }
thiserror.workspace = true
smallvec.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "grammar_benchmarks"
harness = false
