[package]
name = "estnltk-taggers"
version = "0.1.0"
edition = "2021"

[dependencies]
estnltk-core = { path = "../estnltk-core" }
resharp.workspace = true
regex.workspace = true
aho-corasick.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json.workspace = true

[[bench]]
name = "tagger_benchmarks"
harness = false
